--- a/style.css
+++ b/style.css
@@ -49,7 +49,9 @@ body{
     background-image: url("img/Sepatuku.jpg") ;
     background-position: center;
     background-size: cover;
-    display: block;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     width: 90%;
     height: 600px;
     margin: auto;
@@ -69,4 +71,48 @@ body{
 
 .btnorder:hover{
     background-color:#3A5A40;
+}
+
+.footer{
+    background-color:#292643;
+    padding: 20px 40px;
+    display: flex;
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    margin-top: 50px;
+}
+
+.copyright{
+    color: #fff;
+    justify-content: start;
+}
+
+.contact{
+    color: #fff;
+    font-size: 20px;
+    justify-content: start;
+}
+
+.Us{
+    color: #fff;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.follow{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+.socialMedia{
+    color: #fff;
+    font-size: 20px;
+}
+
+.icon a{
+    color: #fff;
+    text-decoration: none;
 }
