Memperbarui background pada Home

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body{
     align-items: center;
     width: 90%;
     height: 600px;
-    margin: auto;
+    margin: 15px auto;
     padding: 20px;
 }
 
