--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -223,8 +223,6 @@ a{
 }
 
 #team{
-    width: 90%;
-    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -253,17 +251,16 @@ a{
 }
 
 .box{
-    width: 266px;
-    height: 100px;
+    width: 250px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 40px;
+    padding: 10px;
     border-radius: 10px;
-    margin: 20px; 
-    position: relative; 
+    margin: 10px; 
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .container {
