--- a/css/todos.css
+++ b/css/todos.css
@@ -26,12 +26,12 @@ main {
     background: linear-gradient(#f3eff5, #fef9f3);
     padding: 0px;
     margin: 0;
-    
+
 }
 
 .todoForm {
     margin-top: 20px;
-    
+
 }
 
 .todoInput {
@@ -65,11 +65,16 @@ ul {
     padding: 10px;
 }
 
+h1{
+    margin-top: 10px;
+}
+
 .todoItems {
     max-width: 350px;
     margin: 0 auto;
     text-align: center;
     padding-top: 40px;
+    min-height: 60%;
 }
   
 .item {
@@ -150,14 +155,13 @@ ul {
 
 .footer{
     background-color:#292643;
-    padding: 20px 0px;
+    padding: 20px 40px;
     display: flex;
     text-align: justify;
     justify-content: space-between;
-    margin-top: auto;
-    width: 100%;
-    box-sizing: border-box;
-    position: fixed;
+    margin-top: 50px;
+    top: 0;
+    position: sticky;
 }
 
 .copyright{
@@ -210,3 +214,4 @@ ul {
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.6);
 } 
+
