--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -53,7 +53,7 @@ body {
         flex-direction: column;
         background-color: #292643;
         position: absolute;
-        top: 70px;
+        top: 50px;
         left: 0;
         width: 100%;
         z-index: 1;
@@ -301,7 +301,7 @@ a{
 .top-bar{
     width: 50%;
     height: 4px;
-    position: absolute;
+    /* position: absolute; */
     left: 50%;
     top:0;
     transform: translate(-50%);
